# LiveCaptions

./: .gitignore  .gitmodules  DOCKER.md  Dockerfile  README.md  entrypoint.sh  flake.nix  meson.build  net.sapples.LiveCaptions.json
.github/workflows/: build.yml
build-aux/flatpak/: net.sapples.LiveCaptions.json
data/: meson.build  net.sapples.LiveCaptions.appdata.xml.in  net.sapples.LiveCaptions.desktop.in  net.sapples.LiveCaptions.gschema.xml
data/icons/: meson.build
po/: POTFILES  meson.build
src/: asrproc.c  asrproc.h  audiocap-internal.h  audiocap-pa.c  audiocap-pw.c  audiocap.c  audiocap.h  common.h  dbus-interface.c  dbus-interface.h  dbus-interface.xml  history.c  history.h  line-gen.c  line-gen.h  livecaptions-application.c  livecaptions-application.h  livecaptions-history-window.c  livecaptions-history-window.h  livecaptions-history-window.ui  livecaptions-settings.c  livecaptions-settings.h  livecaptions-settings.ui  livecaptions-welcome.c  livecaptions-welcome.h  livecaptions-welcome.ui  livecaptions-window.c  livecaptions-window.h  livecaptions-window.ui  livecaptions.gresource.xml  main.c  meson.build  openai.c  openai.h  profanity-filter.c  profanity-filter.h  style.css  window-helper.c  window-helper.h
